personal-website/k8s/service-minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: personal-website
spec:
  type: ClusterIP
  ports:
    - port: 9000
  selector:
    app: minio
