personal-website/k8s/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: personal-website
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres
