personal-website/k8s/service-storage.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage-service
  namespace: personal-website
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: storage
