personal-website/k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: personal-website
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: web
